syntax = "proto3";
package pj.sakuchin.percussion.proto;

message PercussionApiError {

  enum ErrorCode {
    UNKNOWN = 0;
    NO_TOKEN = 1;
    INVALID_FIREBASE_TOKEN = 2;
    USER_HAS_BEEN_ALREADY_REGISTERED = 3;
  }

  ErrorCode errorCode = 1;
  string message = 2;
}